[build-system]
requires = []
build-backend = "madrona_py_build"
backend-path = ["py"]

[project]
name = "madrona_gs"
version = "0.0.1"

[tool.madrona.packages.madrona_gs]
path = "src/bridge/madrona_gs"
ext-out-dir = "build"
extensions = [ "_madrona_gs_batch_renderer", "_madrona_gs_visualizer" ]
requires-python = ">=3.10"

[tool.isort]
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
line_length = 120
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
extend-exclude = '''(
  .ipynb$
)'''
